Use url slugs for other models

--- a/schema/templates/schema/bulkfilm_detail.html
+++ b/schema/templates/schema/bulkfilm_detail.html
@@ -10,7 +10,7 @@
   <tr>
     <td>Filmstock</td>
     <td>{% if object.filmstock is not None %}<a
-        href="{% url 'filmstock-detail' object.filmstock.id %}">{{ object.filmstock }}</a>{% endif %}</td>
+        href="{% url 'filmstock-detail' object.filmstock.slug %}">{{ object.filmstock }}</a>{% endif %}</td>
   </tr>
   <tr>
     <td>Purchase date</td>
