--- a/schema/templates/schema/mountadapter_detail.html
+++ b/schema/templates/schema/mountadapter_detail.html
@@ -4,11 +4,11 @@
 <table class="table table-hover">
   <tr>
     <td>Camera mount</td>
-    <td>{% if object.camera_mount is not None %}<a href="{% url 'mount-detail' object.camera_mount.id %}">{{ object.camera_mount }}</a>{% endif %}</td>
+    <td>{% if object.camera_mount is not None %}<a href="{% url 'mount-detail' object.camera_mount.slug %}">{{ object.camera_mount }}</a>{% endif %}</td>
   </tr>
   <tr>
     <td>Lens mount</td>
-    <td>{% if object.lens_mount is not None %}<a href="{% url 'mount-detail' object.lens_mount.id %}">{{ object.lens_mount }}</a>{% endif %}</td>
+    <td>{% if object.lens_mount is not None %}<a href="{% url 'mount-detail' object.lens_mount.slug %}">{{ object.lens_mount }}</a>{% endif %}</td>
   </tr>
   <tr>
     <td>Has optics</td>
