--- a/schema/templates/schema/lensmodel_detail.html
+++ b/schema/templates/schema/lensmodel_detail.html
@@ -90,6 +90,12 @@
     </td>
   </tr>
   {% endif %}
+  {% if object.elements is not None and object.groups is not None %}
+  <tr>
+    <td>Elements/Groups</td>
+    <td>{{ object.elements }}/{{ object.groups }}</td>
+  </tr>
+  {% else %}
   {% if object.elements is not None %}
   <tr>
     <td>Elements</td>
@@ -101,6 +107,7 @@
     <td>Groups</td>
     <td>{{ object.groups }}</td>
   </tr>
+  {% endif %}
   {% endif %}
   {% if object.nominal_max_angle_diag is not None %}
   <tr>
