Fix display of ranged values for #283

--- a/schema/templates/schema/lensmodel_detail.html
+++ b/schema/templates/schema/lensmodel_detail.html
@@ -72,7 +72,7 @@
   <tr>
     <td>Focal length</td>
     <td>
-      {{ object.min_focal_length }}{% if object.max_focal_length is not None %}-{{ object.max_focal_length }}{% endif %}mm
+      {{ object.min_focal_length }}{% if object.zoom is not False and object.max_focal_length is not None %}-{{ object.max_focal_length }}{% endif %}mm
     </td>
   </tr>
   {% endif %}
@@ -113,7 +113,7 @@
   <tr>
     <td>Diagonal angle of view</td>
     <td>
-      {{ object.nominal_max_angle_diag }}{% if object.nominal_min_angle_diag is not None %}-{{ object.nominal_min_angle_diag }}{% endif %}&deg;
+      {{ object.nominal_max_angle_diag }}{% if object.zoom is not False and object.nominal_min_angle_diag is not None %}-{{ object.nominal_min_angle_diag }}{% endif %}&deg;
     </td>
   </tr>
   {% endif %}
