--- a/schema/templates/schema/cameramodel_detail.html
+++ b/schema/templates/schema/cameramodel_detail.html
@@ -310,6 +310,18 @@
     </td>
   </tr>
   {% endif %}
+  {% if object.created_at is not None %}
+  <tr>
+    <td>Created</td>
+    <td>{{ object.created_at }}{% if object.created_by is not None %} by {{ object.created_by }}{% endif %}</td>
+  </tr>
+  {% endif %}
+  {% if object.updated_at is not None %}
+  <tr>
+    <td>Last updated</td>
+    <td>{{ object.updated_at }}{% if object.updated_by is not None %} by {{ object.updated_by }}{% endif %}</td>
+  </tr>
+  {% endif %}
 </table>
 
 <a data-toggle="collapse" href="#collapseCameras" role="button" aria-expanded="false" aria-controls="collapseCameras">
