Added created & updated logs to all public models

--- a/schema/templates/schema/developer_detail.html
+++ b/schema/templates/schema/developer_detail.html
@@ -22,5 +22,20 @@
     <td>Chemistry</td>
     <td>{{ object.chemistry }}</td>
   </tr>
+  <tr>
+    <th colspan="2">Misc</th>
+  </tr>
+  {% if object.created_at is not None %}
+  <tr>
+    <td>Created</td>
+    <td>{{ object.created_at }}{% if object.created_by is not None %} by {{ object.created_by }}{% endif %}</td>
+  </tr>
+  {% endif %}
+  {% if object.updated_at is not None %}
+  <tr>
+    <td>Last updated</td>
+    <td>{{ object.updated_at }}{% if object.updated_by is not None %} by {{ object.updated_by }}{% endif %}</td>
+  </tr>
+  {% endif %}
 </table>
 {% endblock %}
