--- a/schema/templates/schema/flashprotocol_detail.html
+++ b/schema/templates/schema/flashprotocol_detail.html
@@ -10,5 +10,20 @@
     <td>Manufacturer</td>
     <td>{% if object.manufacturer is not None %}<a href="{% url 'manufacturer-detail' object.manufacturer.slug %}">{{ object.manufacturer }}</a>{% endif %}</td>
   </tr>
+  <tr>
+    <th colspan="2">Misc</th>
+  </tr>
+  {% if object.created_at is not None %}
+  <tr>
+    <td>Created</td>
+    <td>{{ object.created_at }}{% if object.created_by is not None %} by {{ object.created_by }}{% endif %}</td>
+  </tr>
+  {% endif %}
+  {% if object.updated_at is not None %}
+  <tr>
+    <td>Last updated</td>
+    <td>{{ object.updated_at }}{% if object.updated_by is not None %} by {{ object.updated_by }}{% endif %}</td>
+  </tr>
+  {% endif %}
 </table>
 {% endblock %}
