Format serial numbers

--- a/schema/templates/schema/camera_detail.html
+++ b/schema/templates/schema/camera_detail.html
@@ -14,11 +14,11 @@
     </tr>
     <tr>
         <td>Serial</td>
-        <td>{{ object.serial }}</td>
+        <td><code>{{ object.serial }}</code></td>
     </tr>
     <tr>
         <td>Datecode</td>
-        <td>{{ object.datecode }}</td>
+        <td><code>{{ object.datecode }}</code></td>
     </tr>
     <tr>
         <td>Manufactured</td>
