--- a/schema/templates/schema/lens_detail.html
+++ b/schema/templates/schema/lens_detail.html
@@ -8,11 +8,11 @@
   </tr>
   <tr>
     <td>Serial number</td>
-    <td>{{ object.serial }}</td>
+    <td><code>{{ object.serial }}</code></td>
   </tr>
   <tr>
     <td>Date code</td>
-    <td>{{ object.date_code }}</td>
+    <td><code>{{ object.date_code }}</code></td>
   </tr>
   <tr>
     <td>Date manufactured</td>
