--- a/schema/templates/schema/lensmodel_detail.html
+++ b/schema/templates/schema/lensmodel_detail.html
@@ -242,7 +242,7 @@
     </tr>
     {% for lens in lensmodel.lens_set.all %}
     <tr>
-      <td>{{ lens.serial }}</td>
+      <td><code>{{ lens.serial }}</code></td>
       <td>{{ lens.acquired }}</td>
     </tr>
     {% endfor %}
