--- a/schema/templates/schema/filmstock_detail.html
+++ b/schema/templates/schema/filmstock_detail.html
@@ -1,4 +1,5 @@
 {% extends "detail.html" %}
+{% load yesnoicon %}
 
 {% block content %}
 <table class="table table-hover">
@@ -17,11 +18,11 @@
   </tr>
   <tr>
     <td>Colour</td>
-    <td>{{ object.colour }}</td>
+    <td>{{ object.colour|yesnoicon }}</td>
   </tr>
   <tr>
     <td>Panchromatic</td>
-    <td>{{ object.panchromatic }}</td>
+    <td>{{ object.panchromatic|yesnoicon}}</td>
   </tr>
   <tr>
     <td>Process</td>
