--- a/schema/templates/schema/paperstock_detail.html
+++ b/schema/templates/schema/paperstock_detail.html
@@ -1,4 +1,5 @@
 {% extends "detail.html" %}
+{% load yesnoicon %}
 
 {% block content %}
 <table class="table table-hover">
@@ -12,11 +13,11 @@
   </tr>
   <tr>
     <td>Resin coated</td>
-    <td>{{ object.resin_coated }}</td>
+    <td>{{ object.resin_coated|yesnoicon }}</td>
   </tr>
   <tr>
     <td>Colour</td>
-    <td>{{ object.colour }}</td>
+    <td>{{ object.colour|yesnoicon }}</td>
   </tr>
   <tr>
     <td>Finish</td>
