--- a/schema/templates/schema/scan_detail.html
+++ b/schema/templates/schema/scan_detail.html
@@ -1,4 +1,5 @@
 {% extends "detail.html" %}
+{% load yesnoicon %}
 
 {% block content %}
 <table class="table table-hover">
@@ -20,7 +21,7 @@
   </tr>
   <tr>
     <td>Colour</td>
-    <td>{{ object.colour }}</td>
+    <td>{{ object.colour|yesnoicon }}</td>
   </tr>
   <tr>
     <td>Width</td>
