--- a/schema/templates/schema/lens_detail.html
+++ b/schema/templates/schema/lens_detail.html
@@ -1,4 +1,5 @@
 {% extends "detail.html" %}
+{% load yesnoicon %}
 
 {% block content %}
 <table class="table table-hover">
@@ -32,7 +33,7 @@
   </tr>
   <tr>
     <td>Own</td>
-    <td>{{ object.own }}</td>
+    <td>{{ object.own|yesnoicon }}</td>
   </tr>
   <tr>
     <td>Lost</td>
