--- a/schema/templates/schema/mount_detail.html
+++ b/schema/templates/schema/mount_detail.html
@@ -1,4 +1,5 @@
 {% extends "detail.html" %}
+{% load yesnoicon %}
 
 {% block content %}
 <table class="table table-hover">
@@ -8,7 +9,7 @@
   </tr>
   <tr>
     <td>Shutter in lens</td>
-    <td>{{ object.shutter_in_lens }}</td>
+    <td>{{ object.shutter_in_lens|yesnoicon }}</td>
   </tr>
   <tr>
     <td>Type</td>
