--- a/schema/templates/schema/mountadapter_detail.html
+++ b/schema/templates/schema/mountadapter_detail.html
@@ -1,4 +1,5 @@
 {% extends "detail.html" %}
+{% load yesnoicon %}
 
 {% block content %}
 <table class="table table-hover">
@@ -12,11 +13,11 @@
   </tr>
   <tr>
     <td>Has optics</td>
-    <td>{{ object.has_optics }}</td>
+    <td>{{ object.has_optics|yesnoicon }}</td>
   </tr>
   <tr>
     <td>Infinity focus</td>
-    <td>{{ object.infinity_focus }}</td>
+    <td>{{ object.infinity_focus|yesnoicon }}</td>
   </tr>
   <tr>
     <td>Notes</td>
