Styling and formatting improvements

--- a/schema/templates/schema/archive_detail.html
+++ b/schema/templates/schema/archive_detail.html
@@ -16,8 +16,8 @@
     <td>{{ object.max_width }}</td>
   </tr>
   <tr>
-    <td>Max height</td>
-    <td>{{ object.max_height }}</td>
+    <td>Max object size</td>
+    <td>{{ object.max_width }} &times; {{ object.max_height }}</td>
   </tr>
   <tr>
     <td>Location</td>
