--- a/schema/templates/schema/battery_detail.html
+++ b/schema/templates/schema/battery_detail.html
@@ -8,7 +8,7 @@
   </tr>
   <tr>
     <td>Voltage</td>
-    <td>{{ object.voltage }}</td>
+    <td>{{ object.voltage }}V</td>
   </tr>
   <tr>
     <td>Chemistry</td>
