--- a/schema/templates/schema/film_detail.html
+++ b/schema/templates/schema/film_detail.html
@@ -56,7 +56,7 @@
   </tr>
   <tr>
     <td>Development temperature</td>
-    <td>{{ object.dev_temp }}</td>
+    <td>{{ object.dev_temp }}°C</td>
   </tr>
   <tr>
     <td>Development compensation</td>
@@ -76,7 +76,7 @@
   </tr>
   <tr>
     <td>Batch code</td>
-    <td>{{ object.film_batch }}</td>
+    <td><code>{{ object.film_batch }}</code></td>
   </tr>
   <tr>
     <td>Expiry date</td>
