--- a/schema/templates/schema/manufacturer_detail.html
+++ b/schema/templates/schema/manufacturer_detail.html
@@ -16,7 +16,7 @@
   </tr>
   <tr>
     <td>URL</td>
-    <td>{{ object.url }}</td>
+    <td><a href="{{ object.url }}">{{ object.url }}</a></td>
   </tr>
   <tr>
     <td>Founded</td>
