--- a/schema/templates/schema/negative_detail.html
+++ b/schema/templates/schema/negative_detail.html
@@ -49,15 +49,11 @@
   </tr>
   <tr>
     <td>Focal length</td>
-    <td>{{ object.focal_length }}</td>
+    <td>{{ object.focal_length }}mm</td>
   </tr>
   <tr>
     <td>Latitude</td>
-    <td>{{ object.latitude }}</td>
-  </tr>
-  <tr>
-    <td>Longitude</td>
-    <td>{{ object.longitude }}</td>
+    <td>{{ object.latitude }}°, {{ object.longitude }}°</td>
   </tr>
   <tr>
     <td>Flash</td>
