--- a/schema/templates/schema/negativesize_detail.html
+++ b/schema/templates/schema/negativesize_detail.html
@@ -8,19 +8,15 @@
   </tr>
   <tr>
     <td>Width</td>
-    <td>{{ object.width }}</td>
-  </tr>
-  <tr>
-    <td>Height</td>
-    <td>{{ object.height }}</td>
+    <td>{{ object.width }} &times; {{ object.height }}mm</td>
   </tr>
   <tr>
     <td>Crop factor</td>
-    <td>{{ object.crop_factor }}</td>
+    <td>{{ object.crop_factor }}&times;</td>
   </tr>
   <tr>
     <td>Area</td>
-    <td>{{ object.area }}</td>
+    <td>{{ object.area }}mm&sup2;</td>
   </tr>
   <tr>
     <td>Aspect ratio</td>
