--- a/schema/templates/schema/scan_detail.html
+++ b/schema/templates/schema/scan_detail.html
@@ -25,11 +25,7 @@
   </tr>
   <tr>
     <td>Width</td>
-    <td>{{ object.width }}</td>
-  </tr>
-  <tr>
-    <td>Height</td>
-    <td>{{ object.height }}</td>
+    <td>{{ object.width }} &times; {{ object.height }}</td>
   </tr>
 </table>
 {% endblock %}
