--- a/schema/templates/schema/teleconverter_detail.html
+++ b/schema/templates/schema/teleconverter_detail.html
@@ -21,11 +21,7 @@
   </tr>
   <tr>
     <td>Elements</td>
-    <td>{{ object.elements }}</td>
-  </tr>
-  <tr>
-    <td>Groups</td>
-    <td>{{ object.groups }}</td>
+    <td>{{ object.elements }}/{{ object.groups }}</td>
   </tr>
   <tr>
     <td>Multicoated</td>
