--- a/schema/templates/schema/accessory_detail.html
+++ b/schema/templates/schema/accessory_detail.html
@@ -14,29 +14,41 @@
     <td>Model</td>
     <td>{{ object.model }}</td>
   </tr>
+  {% if object.acquired is not None %}
   <tr>
     <td>Acquired</td>
     <td>{{ object.acquired }}</td>
   </tr>
+  {% endif %}
+  {% if object.cost is not None %}
   <tr>
     <td>Cost</td>
     <td>{{ object.cost }}</td>
   </tr>
+  {% endif %
+  {% if object.lost is not None %}}
   <tr>
     <td>Lost</td>
     <td>{{ object.lost }}</td>
   </tr>
+  {% endif %}
+  {% if object.lost_price is not None %}
   <tr>
     <td>Lost price</td>
     <td>{{ object.lost_price }}</td>
   </tr>
+  {% endif %}
+  {% if object.camera_model_compatibility is not None %}
   <tr>
     <td>Camera model compatibility</td>
     <td>{{ object.camera_model_compatibility.all|join:", " }}</td>
   </tr>
+  {% endif %}
+  {% if object.lens_model_compatibility is not None %}
   <tr>
     <td>Lens model compatibility</td>
     <td>{{ object.lens_model_compatibility.all|join:", " }}</td>
   </tr>
+  {% endif %}
 </table>
 {% endblock %}
