--- a/schema/templates/schema/bulkfilm_detail.html
+++ b/schema/templates/schema/bulkfilm_detail.html
@@ -12,26 +12,36 @@
     <td>{% if object.filmstock is not None %}<a
         href="{% url 'filmstock-detail' object.filmstock.slug %}">{{ object.filmstock }}</a>{% endif %}</td>
   </tr>
+  {% if object.purchase_date is not None %}
   <tr>
     <td>Purchase date</td>
     <td>{{ object.purchase_date }}</td>
   </tr>
+  {% endif %}
+  {% if object.cost is not None %}
   <tr>
     <td>Cost</td>
     <td>{{ object.cost }}</td>
   </tr>
+  {% endif %}
+  {% if object.source is not None %}
   <tr>
     <td>Source</td>
     <td>{{ object.source }}</td>
   </tr>
+  {% endif %}
+  {% if object.batch is not None %}
   <tr>
     <td>Batch code</td>
     <td>{{ object.batch }}</td>
   </tr>
+  {% endif %}
+  {% if object.expiry is not None %}
   <tr>
     <td>Expiry date</td>
     <td>{{ object.expiry }}</td>
   </tr>
+  {% endif %}
 </table>
 
 <a data-toggle="collapse" href="#collapseFilms" role="button" aria-expanded="false" aria-controls="collapseFilms">
@@ -45,7 +55,7 @@
     </tr>
     {% for film in bulkfilm.film_set.all %}
     <tr>
-      <td>{{ film.id }}</td>
+      <td><a href="{% url 'film-detail' film.id %}"">{{ film.id }}</a></td>
       <td>{{ film.title }}</td>
     </tr>
     {% endfor %}
