--- a/schema/templates/schema/flashprotocol_detail.html
+++ b/schema/templates/schema/flashprotocol_detail.html
@@ -6,10 +6,12 @@
     <td>Name</td>
     <td>{{ object.name }}</td>
   </tr>
+  {% if object.manufacturer is not None %}
   <tr>
     <td>Manufacturer</td>
     <td>{% if object.manufacturer is not None %}<a href="{% url 'manufacturer-detail' object.manufacturer.slug %}">{{ object.manufacturer }}</a>{% endif %}</td>
   </tr>
+  {% endif %}
   <tr>
     <th colspan="2">Misc</th>
   </tr>
