--- a/schema/templates/schema/lens_detail.html
+++ b/schema/templates/schema/lens_detail.html
@@ -7,53 +7,77 @@
     <td>Lens model</td>
     <td>{% if object.lensmodel is not None %}<a href="{% url 'lensmodel-detail' object.lensmodel.slug %}">{{ object.lensmodel }}</a>{% endif %}</td>
   </tr>
+  {% if object.serial is not None %}
   <tr>
     <td>Serial number</td>
     <td><code>{{ object.serial }}</code></td>
   </tr>
+  {% endif %}
+  {% if object.date_code is not None %}
   <tr>
     <td>Date code</td>
     <td><code>{{ object.date_code }}</code></td>
   </tr>
+  {% endif %}
+  {% if object.manufactured is not None %}
   <tr>
     <td>Date manufactured</td>
     <td>{{ object.manufactured }}</td>
   </tr>
+  {% endif %}
+  {% if object.acquired is not None %}
   <tr>
     <td>Acquired</td>
     <td>{{ object.acquired }}</td>
   </tr>
+  {% endif %}
+  {% if object.cost is not None %}
   <tr>
     <td>Cost</td>
     <td>{{ object.cost }}</td>
   </tr>
+  {% endif %}
+  {% if object.notes is not None %}
   <tr>
     <td>Notes</td>
     <td>{{ object.notes }}</td>
   </tr>
+  {% endif %}
+  {% if object.own is not None %}
   <tr>
     <td>Own</td>
     <td>{{ object.own|yesnoicon }}</td>
   </tr>
+  {% endif %}
+  {% if object.lost is not None %}
   <tr>
     <td>Lost</td>
     <td>{{ object.lost }}</td>
   </tr>
+  {% endif %}
+  {% if object.lost_price is not None %}
   <tr>
     <td>Lost price</td>
     <td>{{ object.lost_price }}</td>
   </tr>
+  {% endif %}
+  {% if object.source is not None %}
   <tr>
     <td>Source</td>
     <td>{{ object.source }}</td>
   </tr>
+  {% endif %}
+  {% if object.condition is not None %}
   <tr>
     <td>Condition</td>
     <td>{{ object.condition }}</td>
   </tr>
+  {% endif %}
+  {% if object.condition_notes is not None %}
   <tr>
     <td>Condition notes</td>
     <td>{{ object.condition_notes }}</td>
   </tr>
+  {% endif %}
 </table>
 {% endblock %}
