--- a/schema/templates/schema/paperstock_detail.html
+++ b/schema/templates/schema/paperstock_detail.html
@@ -7,22 +7,30 @@
     <td>Name</td>
     <td>{{ object.name }}</td>
   </tr>
+  {% if object.manufacturer is not None %}
   <tr>
     <td>Manufacturer</td>
     <td>{% if object.manufacturer is not None %}<a href="{% url 'manufacturer-detail' object.manufacturer.slug %}">{{ object.manufacturer }}</a>{% endif %}</td>
   </tr>
+  {% endif %}
+  {% if object.resin_coated is not None %}
   <tr>
     <td>Resin coated</td>
     <td>{{ object.resin_coated|yesnoicon }}</td>
   </tr>
+  {% endif %}
+  {% if object.colour is not None %}
   <tr>
     <td>Colour</td>
     <td>{{ object.colour|yesnoicon }}</td>
   </tr>
+  {% endif %}
+  {% if object.finish is not None %}
   <tr>
     <td>Finish</td>
     <td>{{ object.finish }}</td>
   </tr>
+  {% endif %}
   <tr>
     <th colspan="2">Misc</th>
   </tr>
