--- a/schema/templates/schema/print_detail.html
+++ b/schema/templates/schema/print_detail.html
@@ -7,77 +7,112 @@
     <td>Negative</td>
     <td>{% if object.negative is not None %}<a href="{% url 'negative-detail' object.negative.id %}">{{ object.negative }}</a>{% endif %}</td>
   </tr>
+  {% if object.date is not None %}
   <tr>
     <td>Date</td>
     <td>{{ object.date }}</td>
   </tr>
+  {% endif %}
+  {% if object.paper_stock is not None %}
   <tr>
     <td>Paperstock</td>
     <td>{% if object.paper_stock is not None %}<a href="{% url 'paper_stock-detail' object.paper_stock.id %}">{{ object.paper_stock }}</a>{% endif %}</td>
   </tr>
+  {% endif %}
+  {% if object.width is not None and object.height is not None %}
   <tr>
     <td>Size</td>
     <td>{{ object.width }} &times; {{ object.height }}</td>
   </tr>
+  {% endif %}
+  {% if object.aperture is not None %}
   <tr>
     <td>Aperture</td>
     <td><em>f</em>/{{ object.aperture }}</td>
   </tr>
+  {% endif %}
+  {% if object.exposure_time is not None %}
   <tr>
     <td>Exposure time</td>
     <td>{{ object.exposure_time }}</td>
   </tr>
+  {% endif %}
+  {% if object.filtration_grade is not None %}
   <tr>
     <td>Filtration grade</td>
     <td>{{ object.filtration_grade }}</td>
   </tr>
+  {% endif %}
+  {% if object.development_time is not None %}
   <tr>
     <td>Development time</td>
     <td>{{ object.development_time }}</td>
   </tr>
+  {% endif %}
+  {% if object.toner is not None %}
   <tr>
     <td>Toner</td>
     <td>{{ object.toner.all|join:", " }}</td>
   </tr>
+  {% endif %}
+  {% if object.own is not None %}
   <tr>
     <td>Own</td>
     <td>{{ object.own|yesnoicon }}</td>
   </tr>
+  {% endif %}
+  {% if object.location is not None %}
   <tr>
     <td>Location</td>
     <td>{{ object.location }}</td>
   </tr>
+  {% endif %}
+  {% if object.sold_price is not None %}
   <tr>
     <td>Sold price</td>
     <td>{{ object.sold_price }}</td>
   </tr>
+  {% endif %}
+  {% if object.enlarger is not None %}
   <tr>
     <td>Enlarger</td>
     <td>{{ object.enlarger }}</td>
   </tr>
+  {% endif %}
   <tr>
     <td>Enlarger lens</td>
     <td>{{ object.lens }}</td>
   </tr>
+  {% endif %}
+  {% if object.developer is not None %}
   <tr>
     <td>Developer</td>
     <td>{% if object.developer is not None %}<a href="{% url 'developer-detail' object.developer.slug %}">{{ object.developer }}</a>{% endif %}</td>
   </tr>
+  {% endif %}
+  {% if object.fine is not None %}
   <tr>
     <td>Fine</td>
     <td>{{ object.fine|yesnoicon }}</td>
   </tr>
+  {% endif %}
+  {% if object.notes is not None %}
   <tr>
     <td>Notes</td>
     <td>{{ object.notes }}</td>
   </tr>
+  {% notes %}
+  {% if object.archive is not None %}
   <tr>
     <td>Archive</td>
     <td>{% if object.archive is not None %}<a href="{% url 'archive-detail' object.archive.id %}">{{ object.archive }}</a>{% endif %}</td>
   </tr>
+  {% endif %}
+  {% if object.printer is not None %}
   <tr>
     <td>Printer</td>
     <td>{{ object.printer }}</td>
   </tr>
+  {% endif %}
 </table>
 {% endblock %}
