--- a/schema/templates/schema/repair_detail.html
+++ b/schema/templates/schema/repair_detail.html
@@ -8,19 +8,25 @@
   </tr>
   <tr>
     <td>Lens</td>
-    <td>{{ object.lens }}</td>
+    <td>{% if object.lens is not None %}<a href="{% url 'lens-detail' object.lens.id %}">{{ object.lens }}</a>{% endif %}</td>
   </tr>
+  {% if object.date is not None %}
   <tr>
     <td>Date</td>
     <td>{{ object.date }}</td>
   </tr>
+  {% endif %}
+  {% if object.summary is not None %}
   <tr>
     <td>Summary</td>
     <td>{{ object.summary }}</td>
   </tr>
+  {% endif %}
+  {% if object.description is not None %}
   <tr>
     <td>Description</td>
     <td>{{ object.detail }}</td>
   </tr>
+  {% endif %}
 </table>
 {% endblock %}
